-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 2.9.0
-
Fix Version/s: Impala 2.9.0
-
Component/s: Backend
-
Labels:
-
Epic Color:ghx-label-3
Excessive logging to impalad.INFO while queries are loading metadata from ImpalaServer::GetRuntimeProfileStr
Status ImpalaServer::GetRuntimeProfileStr(const TUniqueId& query_id, bool base64_encoded, stringstream* output) { DCHECK(output != nullptr); // Search for the query id in the active query map { shared_ptr<ClientRequestState> request_state = GetClientRequestState(query_id); if (request_state.get() != nullptr) { // For queries in CREATED state, the profile information isn't populated yet. if (request_state->query_state() == beeswax::QueryState::CREATED) { return Status("Query plan is not ready."); } lock_guard<mutex> l(*request_state->lock()); if (base64_encoded) { request_state->profile().SerializeToArchiveString(output); } else { request_state->profile().PrettyPrint(output); } return Status::OK(); } }
I0531 14:11:29.161602 107591 Frontend.java:929] Compiled query. I0531 14:11:29.871356 190031 status.cc:122] Query plan is not ready. @ 0x83c119 impala::Status::Status() @ 0xab871c impala::ImpalaServer::GetRuntimeProfileStr() @ 0xae781c impala::ImpalaHttpHandler::QueryProfileEncodedHandler() @ 0xbf445a impala::Webserver::RenderUrlWithTemplate() @ 0xbf59a7 impala::Webserver::BeginRequestCallback() @ 0xc08bb0 (unknown) @ 0xc0b32d (unknown) @ 0xc0b9bd (unknown) @ 0x37dd207aa1 (unknown) @ 0x37dcee893d (unknown)
- is broken by
-
IMPALA-1972 Queries that take a long time to plan can cause webserver to block other queries
-
- Resolved
-