IMPALA-5411: Avoid log spew from GetRuntimeProfileStr

GetRuntimeProfileStr can potentially log lots of spam to the
coordinator logs if there are clients continuously polling the
web endpoints when the table metadata is still loading. The fix
is to use an appopriate Status constructor that doesn't log it.

Change-Id: I2d0ae8c161346b4ec8c865bc23c5c1cd49c1ce7b
Reviewed-on: http://gerrit.cloudera.org:8080/7042
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Impala Public Jenkins